src/test/ui-fulldeps/feature-gate-plugin.stderr
error[E0658]: compiler plugins are deprecated
  --> $DIR/feature-gate-plugin.rs:4:1
   |
LL | #![plugin(empty_plugin)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29597
   = help: add `#![feature(plugin)]` to the crate attributes to enable

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/feature-gate-plugin.rs:4:1
   |
LL | #![plugin(empty_plugin)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
